* Tue Jun 12 2007 <gerbier@users.sourceforge.net> 2.1.1-1
- remove commented tags (PAYLOAD*, INSTALLTID, OPTFLAGS, PLATFORM, SIGSIZE) to solve bug for rpm 3.x
- add more info to bugreport (issues, warnings)
- add choice of email addresse for bug report

* Tue May 15 2007 <gerbier@users.sourceforge.net> 2.1.0-1
- remove old deprecated tags ICON and SERIAL
- comment missing localisation file (lang)
- remove commnented tag XPM and GIF
- allow concurrent use : random working directory
- add new long option --debug
- check if rpm tags exists (CheckTags)
- add code to send bug report by mail (SendBugReport)

* Tue May 31 2005 <gerbier@users.sourceforge.net> 2.0.4-1
- force tmpdir to be empty (Christopher Faylor)
- fix bug with testinstall return
- fix bug with short options -r -n
- improved nodoc plugin

* Fri May 20 2005 <gerbier@users.sourceforge.net> 2.0.3-1
- add --notest-install option (Christopher Faylor)
- add --release option (Christopher Faylor)
- add nodoc plugin

* Wed Mar  2 2005 <gerbier@users.sourceforge.net> 2.0.2-1
- fix bug with BuildArch tag (rpmrebuild_popt)

* Tue Mar  1 2005 <valery_reznic@users.sourceforge.net> 2.0.2-1
- Change from /usr/local/bin to /usr/bin from /usr/local/man to /usr/share/man
- plugins moved to the plugins/ directory in the source tree
- plugins manpages renamed to the .in 

* Tue Feb 22 2005 <valery_reznic@users.sourceforge.net> 2.0.1-1
- fix for rpm-4.3.[12]

* Wed Dec 29 2004 <gerbier@users.sourceforge.net> 2.0.0-1
- add demo, uniq, file2pacDep plugins (exemples)
- add commented tags (PAYLOAD*, PATCH, SIZE, INSTALLTID, OPTFLAGS, PLATFORM, ARCHIVESIZE,SIGSIZE, SERIAL)

* Sun Nov 14 2004 <valery_reznic@users.sourceforge.net> 2.0.0-1
- rpmrebuild_parser.src - added '--help-plugins' option

* Wed Oct 26 2004 <valery_reznic@users.sourceforge.net> 2.0.0-1
- processing of /change/modify/edit was moved to the processng_func.src